
if( DESIRED_QT_VERSION EQUAL 4 AND QT_FOUND )
  BRAINVISA_DEPENDENCY( RUN DEPENDS libqtcore4 RUN ">= ${QT_VERSION}" )
  BRAINVISA_DEPENDENCY( DEV DEPENDS libqtcore4 DEV )
  BRAINVISA_DEPENDENCY( RUN DEPENDS libqtgui4 RUN ">= ${QT_VERSION}" )
  BRAINVISA_DEPENDENCY( DEV DEPENDS libqtgui4 DEV )
#   BRAINVISA_DEPENDENCY( RUN DEPENDS libqt4-qt3support RUN ">= ${QT_VERSION}" )
#   BRAINVISA_DEPENDENCY( DEV DEPENDS libqt4-qt3support DEV )
elseif( DESIRED_QT_VERSION EQUAL 5 AND QT_FOUND )
#   BRAINVISA_DEPENDENCY( RUN DEPENDS libqt5core RUN ">= ${QT_VERSION}" )
#   BRAINVISA_DEPENDENCY( DEV DEPENDS libqt5core DEV )
#   BRAINVISA_DEPENDENCY( RUN DEPENDS libqt5widgets RUN ">= ${QT_VERSION}" )
#   BRAINVISA_DEPENDENCY( DEV DEPENDS libqt5widgets DEV )
endif()

BRAINVISA_DEPENDENCY( DEV DEPENDS "${BRAINVISA_PACKAGE_NAME}" RUN "= ${${BRAINVISA_PACKAGE_NAME}_VERSION}" )

include( "${QT_USE_FILE}" )

add_subdirectory( src )

