
if( DESIRED_QT_VERSION EQUAL 4 AND QT_FOUND )
  BRAINVISA_DEPENDENCY( RUN DEPENDS libqtcore4 RUN ">= ${QT_VERSION}" )
  BRAINVISA_DEPENDENCY( DEV DEPENDS libqtcore4 DEV )
  BRAINVISA_DEPENDENCY( RUN DEPENDS libqtgui4 RUN ">= ${QT_VERSION}" )
  BRAINVISA_DEPENDENCY( DEV DEPENDS libqtgui4 DEV )
elseif( DESIRED_QT_VERSION EQUAL 5 AND QT_FOUND )
  BRAINVISA_DEPENDENCY( RUN DEPENDS libqt5core RUN ">= ${QT_VERSION}" )
  BRAINVISA_DEPENDENCY( DEV DEPENDS libqt5core DEV )
  BRAINVISA_DEPENDENCY( RUN DEPENDS libqt5gui RUN ">= ${QT_VERSION}" )
  BRAINVISA_DEPENDENCY( DEV DEPENDS libqt5gui DEV )
  BRAINVISA_DEPENDENCY( RUN DEPENDS libqt5widgets RUN ">= ${QT_VERSION}" )
  BRAINVISA_DEPENDENCY( DEV DEPENDS libqt5widgets DEV )
  BRAINVISA_DEPENDENCY( RUN RECOMMENDS libqt5sql RUN ">= ${QT_VERSION}" )
  BRAINVISA_DEPENDENCY( DEV RECOMMENDS libqt5sql DEV )
endif()

BRAINVISA_DEPENDENCY( DEV DEPENDS "${BRAINVISA_PACKAGE_NAME}" RUN "= ${${BRAINVISA_PACKAGE_NAME}_VERSION}" )

if( DESIRED_QT_VERSION LESS 5 )
  include( "${QT_USE_FILE}" )
elseif( DESIRED_QT_VERSION EQUAL 5 )
  add_definitions(${Qt5Widgets_DEFINITIONS} ${Qt5Sql_DEFINITIONS})
  include_directories(${Qt5Widgets_INCLUDE_DIRS} ${Qt5Sql_INCLUDE_DIRS})
  set( QT_LIBRARIES ${Qt5Widgets_LIBRARIES} ${Qt5Sql_LIBRARIES} )
elseif( DESIRED_QT_VERSION EQUAL 6 )
  add_definitions(${Qt6Widgets_DEFINITIONS} ${Qt6Sql_DEFINITIONS})
  include_directories(${Qt6Widgets_INCLUDE_DIRS} ${Qt6Sql_INCLUDE_DIRS})
  set( QT_LIBRARIES ${Qt6Widgets_LIBRARIES} ${Qt6Sql_LIBRARIES} )
endif()
set(QT_LIBRARIES ${QT_LIBRARIES} ${OPENGL_FIX_LIBRARIES})

add_subdirectory( src )

